<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<packaging>pom</packaging>

	<groupId>com.ryanmichela</groupId>
	<artifactId>szsshd-parent</artifactId>
	<version>${revision}</version>
	<url>https://github.com/szumielxd/Minecraft-SSHD/</url>
	<name>${pluginName}</name>
	<description>Plugin for syncing server informations through database</description>

	<properties>
		<java.version>17</java.version>
		<pluginName>SZSHD</pluginName>
		<author>Ryan Michela, Haarolean, toxuin, Justin Crawford, Zachery Coleman, szumielxd</author>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<revision>3.1.1</revision>
		<bukkitMainClass>com.ryanmichela.sshd.bukkit.SshdPluginBukkit</bukkitMainClass>
		<bungeeMainClass>com.ryanmichela.sshd.bungee.SshdPluginBungee</bungeeMainClass>
	</properties>

	<!-- Repositories -->
	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/groups/public</url>
		</repository>
	</repositories>

	<!-- License -->
	<licenses>
		<license>
			<name>GPL2</name>
			<url>http://www.gnu.org/licenses/gpl-2.0.html</url>
		</license>
	</licenses>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>szsshd-logging</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>szsshd-common</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>szsshd-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>szsshd-bungee</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>szsshd-bukkit</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<!-- Dependencies -->
	<dependencies>
		<dependency>
			<groupId>net.md-5</groupId>
			<artifactId>bungeecord-config</artifactId>
			<version>1.20-R0.1-SNAPSHOT</version>
			<scope>compile</scope>
			<type>jar</type>
		</dependency>
		
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>2.2</version>
			<scope>compile</scope>
			<type>jar</type>
		</dependency>
		
		<dependency>
			<groupId>net.md-5</groupId>
			<artifactId>bungeecord-chat</artifactId>
			<version>1.20-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>org.apache.sshd</groupId>
			<artifactId>sshd-core</artifactId>
			<version>2.12.1</version>
			<scope>compile</scope>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>org.apache.sshd</groupId>
			<artifactId>sshd-mina</artifactId>
			<version>2.12.1</version>
			<scope>compile</scope>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>org.apache.sshd</groupId>
			<artifactId>sshd-common</artifactId>
			<version>2.12.1</version>
			<scope>compile</scope>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>org.apache.sshd</groupId>
			<artifactId>sshd-sftp</artifactId>
			<version>2.12.1</version>
			<scope>compile</scope>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>net.i2p.crypto</groupId>
			<artifactId>eddsa</artifactId>
			<version>0.3.0</version>
			<scope>compile</scope>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>org.apache.mina</groupId>
			<artifactId>mina-core</artifactId>
			<version>2.2.3</version>
			<scope>compile</scope>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.12</version>
			<scope>compile</scope>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
			<version>2.0.12</version>
			<scope>compile</scope>
			<type>jar</type>
		</dependency>
		
		<dependency>
			<groupId>org.jline</groupId>
			<artifactId>jline</artifactId>
			<version>3.21.0</version>
			<scope>compile</scope>
		</dependency>
		
		<dependency>
			<groupId>org.jline</groupId>
			<artifactId>jline-terminal-jansi</artifactId>
			<version>3.21.0</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.23.0</version>
			<scope>compile</scope>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.16.0</version>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
			<scope>compile</scope>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.30</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<!-- Build -->
	<build>
		<defaultGoal>clean package</defaultGoal>

		<plugins>
			<!-- Compile plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.12.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>szsshd-bukkit</module>
		<module>szsshd-bungee</module>
		<module>szsshd-common</module>
		<module>szsshd-logging</module>
		<module>szsshd-api</module>
		<module>szsshd-assembly</module>
	</modules>
</project>
